# kitakyu-net

./: .env.example  .gitignore  CLAUDE.md  README.md  START_HERE.md  check_neo4j.py  config.yaml  create_dummy_data.py  main.py  pyproject.toml  requirements.txt  run_api.py  run_streamlit.sh  test_direct_neo4j.py  test_goal_api.py  test_monitoring.py  test_neo4j_connection.py  test_ollama_client.py  test_rag_pipeline.py  test_user_api.py  verify_data.py
backend/: config.py
backend/api/: main.py
backend/db/: init_monitoring_schema.py
backend/llm/: goal_generator.py  needs_analyzer.py  ollama_client.py  rag_pipeline.py  service_coordinator.py
backend/services/: assessment_service.py  document_generator.py  document_service.py  goal_service.py  monitoring_service.py  plan_service.py  service_need_service.py  user_detail_service.py  user_service.py
data/processed/: processing_report_20251031_184227.txt  processing_report_20251031_195233.txt
data/templates/: template_guide.md
docs/: data_dictionary.md  neo4j_schema.md  page_structure_analysis.md  wamnet_guide.md
frontend/: app.py  app_old.py
frontend/pages/: 1_👤_User_Management.py  2_📊_Assessment.py  3_🎯_Plan_Creation.py  4_🏥_Facility_Search.py  (+2 more)
scripts/: 01_wamnet_processor.py  02_data_processor.py  03_neo4j_importer.py  05_apply_mvp2_schema.py  add_notebook_data.py  add_service_data.py  check_neo4j_schema.py  extract_kitakyushu.py  test_assessment_input.py  test_document_export.py  test_monitoring.py  test_user_detail.py
test_outputs/: monitoring_mon_48b4580fa721.docx  plan_85bea363.docx
(+31 files in other folders)
