[project]
name = "kitakyu-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "click>=8.3.0",
    "fastapi>=0.121.0",
    "google-auth>=2.42.1",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "neo4j>=6.0.2",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "streamlit>=1.51.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
]
